# mailio

./: CMakeLists.txt
examples/: imap_async_example.cpp  imap_fetch_one.cpp  imap_folders.cpp  imap_remove_msg.cpp  imap_search.cpp  imap_stat.cpp  message.cpp  pop3_attachment.cpp  pop3_fetch_one.cpp  pop3_remove_msg.cpp  smtp_attachment.cpp  smtp_insecure_local_dev.cpp  smtp_multipart.cpp  smtp_simple_msg.cpp  smtp_starttls.cpp  smtp_utf8_qp_msg.cpp
include/mailio/: base64.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  dialog.hpp  export.hpp  imap.hpp  import.hpp  mailboxes.hpp  mailio.hpp  message.hpp  mime.hpp  percent.hpp  pool.hpp  pop3.hpp  q_codec.hpp  quoted_printable.hpp  smtp.hpp
include/mailio/codec/: base64.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  percent.hpp  q_codec.hpp  quoted_printable.hpp
include/mailio/detail/: append.hpp  ascii.hpp  asio_decl.hpp  asio_error.hpp  async_mutex.hpp  auth_policy.hpp  log.hpp  reconnection.hpp  redact.hpp  result.hpp  sanitize.hpp  sasl.hpp  timeout_config.hpp
include/mailio/imap/: client.hpp  error.hpp  types.hpp  utf7.hpp
include/mailio/mime/: mailboxes.hpp  message.hpp  mime.hpp
include/mailio/net/: dialog.hpp  tls_error.hpp  (+4 more)
modules/: CMakeLists.txt  mailio.codec.cppm  mailio.cppm  mailio.imap.cppm  mailio.mime.cppm  mailio.net.cppm  mailio.pop3.cppm  mailio.smtp.cppm
test/: test_auth_policy.cpp  test_imap_append_build.cpp  test_imap_auth_sasl.cpp  test_imap_parse.cpp  test_message.cpp  test_pop3_reconnect_snapshot.cpp  test_redact.cpp  test_smtp_mail_from_params.cpp  test_tls_options_normalize.cpp
(+11 files in other folders)
